+feat listenning session

--- a/config/file/config.local.yaml.example
+++ b/config/file/config.local.yaml.example
@@ -13,6 +13,10 @@ mongo:
   connectionTimeout: 10
   pingTimeout: 3
 
+snowflake:
+  epoch: 1626670674000
+  pod_id: 1
+
 spotify:
   credentials:
     scope: ""
