--- a/config/file/config.local.yaml
+++ b/config/file/config.local.yaml
@@ -13,6 +13,10 @@ mongo:
   connectionTimeout: 10
   pingTimeout: 3
 
+snowflake:
+  epoch: 1626670674000
+  pod_id: 1
+
 spotify:
   credentials:
     scope: "user-read-private user-read-email playlist-read-collaborative playlist-modify-public playlist-read-private playlist-modify-private app-remote-control user-modify-playback-state user-read-playback-state user-read-currently-playing"
